--- a/index.html
+++ b/index.html
@@ -4,24 +4,23 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Seattle versus Tampa</title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<div class="container-fluid">
-		<div class="row">
-			<div class="col-md-6 col-lg-6 col-sm-6 col-12 seattleback">
+		<div class="cities row">
+			<div class="col-md-6 col-lg-6 col-sm-6 col-6 seattleback">
 			</div>
-			<div class="col-md-6 col-lg-6 col-sm-6 col-12 tampaback">
+			<div class="col-md-6 col-lg-6 col-sm-6 col-6 tampaback">
 			</div>
 			<div class="versus">
 				<img src="img/versus.png">
 			</div>
+		</div>
+		<div class="row">
 			<div class="col-md-6 col-lg-6 col-sm-6 col-12 cityname">
 				Seattle
-			</div>
-			<div class="versus2">
-				<img src="img/versus.png">
 			</div>
 			<div class="col-md-6 col-lg-6 col-sm-6 col-12 cityname">
 				Tampa
@@ -31,65 +30,54 @@
 			</div>
 			<div class="col-md-6 col-lg-6 col-sm-6 col-12 content">
 				<div class="data">
-					Штат: Вашингтон (WA)<p><p>
-					Расположение:<p>
-					<span>
-						Широта 47.34, долгота 122.19.
-					</span><p>
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1185286.5841374667!2d-122.39946043099623!3d47.29218573149218!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5490102c93e83355%3A0x102565466944d59a!2z0KHQuNGN0YLQuywg0JLQsNGI0LjQvdCz0YLQvtC9LCDQodCo0JA!5e1!3m2!1sru!2sru!4v1595696322825!5m2!1sru!2sru" style="border:0;width:90%;height: 30vmax;" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+					<p>
+						Штат: Вашингтон (WA)
+					</p>
+					<p>
+						Расположение: широта 47.34, долгота 122.19.
+					</p>
+					<p>
+					Площадь: 217 км<sup>2</sup>
+					</p>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1185286.5841374667!2d-122.39946043099623!3d47.29218573149218!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5490102c93e83355%3A0x102565466944d59a!2z0KHQuNGN0YLQuywg0JLQsNGI0LjQvdCz0YLQvtC9LCDQodCo0JA!5e1!3m2!1sru!2sru!4v1595696322825!5m2!1sru!2sru" style="border:0;width:90%;height: 400px;" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 				</div>
-				<div class="data" id="block1data1">
-					Площадь:
-					<span>
-						217 км<sup>2</sup>
-					</span>
-				</div>
+				
 			</div>
 			<div class="col-md-6 col-lg-6 col-sm-6 col-12 content">
 				<div class="data">
-					Штат: Флорида (FL)<p><p>
-					Расположение:<p>
-					<span>
-						Широта 27.56, долгота 82.27.
-					</span><p>
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d545725.9775726197!2d-82.61822219898382!3d27.960897800175292!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88c2b782b3b9d1e1%3A0xa75f1389af96b463!2z0KLQsNC80L_QsCwg0KTQu9C-0YDQuNC00LAsINCh0KjQkA!5e1!3m2!1sru!2sru!4v1595696675451!5m2!1sru!2sru" style="border:0;width:90%;height: 30vmax;" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-				</div>
-				<div class="data"id="block1data2">
-					Площадь:
-					<span>
-						455,4 км<sup>2</sup>
-					</span>
+					<p>Штат: Флорида (FL)</p>
+					<p>
+						Расположение: широта 27.56, долгота 82.27.
+					</p>
+					<p>
+					Площадь: 455,4 км<sup>2</sup>
+					</p>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d545725.9775726197!2d-82.61822219898382!3d27.960897800175292!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88c2b782b3b9d1e1%3A0xa75f1389af96b463!2z0KLQsNC80L_QsCwg0KTQu9C-0YDQuNC00LAsINCh0KjQkA!5e1!3m2!1sru!2sru!4v1595696675451!5m2!1sru!2sru" style="border:0;width:90%;height: 400px;" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 				</div>
 			</div>
 			<div class="col-md-12 col-lg-12 col-sm-12 col-12 oglav greenoglav">
 				Население
 			</div>
-			<div class="col-md-6 col-lg-6 col-sm-6 col-12 content contentgreen">
+			<div class="col-md-6 col-lg-6 col-sm-6 col-12 content contentgreen population">
 				<div class="circlepopulation">
 					783,137 чел.
 				</div>
-				<div class="data" id="block3data1">
+				<div class='population_density'>
 					Плотность населения:<p>
 					<span>
 						3605 чел./кв.км.
 					</span>	
 				</div>
-				<div class="place">
-					<img src="img/silver-medal.png">
-				</div>
 			</div>
-			<div class="col-md-6 col-lg-6 col-sm-6 col-12 content contentgreen">
+			<div class="col-md-6 col-lg-6 col-sm-6 col-12 content contentgreen population">
 				<div class="circlepopulation">
 					413,704 чел.
 				</div>
-				<div class="data" id="block3data2">
+				<div class='population_density'>
 					Плотность населения:<p>
 					<span>
 						1400 чел./кв.км.
 					</span> 	
-				</div>
-				<div class="place">
-					<img src="img/gold-medal.png">
 				</div>
 			</div>
 			<div class="col-md-12 col-lg-12 col-sm-12 col-12 oglav">
@@ -122,6 +110,6 @@
 	</div>
 	<script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
 	<script type="text/javascript" src='js/script.js'></script>
-	<script type="text/javascript" src='js/bootstrap.js'></script>
+	<script type="text/javascript" src='js/bootstrap.min.js'></script>
 </body>
 </html>
