--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="col-md-12 col-lg-12 col-sm-12 col-12 oglav greenoglav">
 				Население
 			</div>
-			<div class="col-md-6 col-lg-6 col-sm-6 col-12 content contentgreen population">
+			<div class="col-md-6 col-lg-6 col-sm-6 col-12 content contentgreen population left_content">
 				<div class="circlepopulation">
 					783,137 чел.
 				</div>
@@ -69,7 +69,7 @@
 					</span>	
 				</div>
 			</div>
-			<div class="col-md-6 col-lg-6 col-sm-6 col-12 content contentgreen population">
+			<div class="col-md-6 col-lg-6 col-sm-6 col-12 content contentgreen population right_content">
 				<div class="circlepopulation">
 					413,704 чел.
 				</div>
@@ -79,6 +79,8 @@
 						1400 чел./кв.км.
 					</span> 	
 				</div>
+			</div>
+			<div class="col-md-12 col-lg-12 col-sm-12 col-12 bottomblock_green">	
 			</div>
 			<div class="col-md-12 col-lg-12 col-sm-12 col-12 oglav">
 				Климат и погода
